[gd_scene load_steps=3 format=3 uid="uid://b4ipaxr61k83x"]

[ext_resource type="PackedScene" uid="uid://bd7y8koo1w71" path="res://scenes/interface_base/interface_base.tscn" id="1_hh7ly"]
[ext_resource type="Script" path="res://scenes/interface_base/settings/settings.gd" id="2_vw8er"]

[node name="Settings" instance=ExtResource("1_hh7ly")]
script = ExtResource("2_vw8er")

[node name="VB" parent="PC/MC" index="0"]
theme_override_constants/separation = 30

[node name="Label" parent="PC/MC/VB" index="0"]
text = "Settings"

[node name="PanelContainer" type="PanelContainer" parent="PC/MC/VB" index="1"]
layout_mode = 2
size_flags_vertical = 3

[node name="VB" type="VBoxContainer" parent="PC/MC/VB/PanelContainer" index="0"]
layout_mode = 2
theme_override_constants/separation = 40

[node name="DisplaySettings" type="VBoxContainer" parent="PC/MC/VB/PanelContainer/VB" index="0"]
layout_mode = 2

[node name="DisplaySettingsLabel" type="Label" parent="PC/MC/VB/PanelContainer/VB/DisplaySettings" index="0"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Display Settings"

[node name="HB" type="HBoxContainer" parent="PC/MC/VB/PanelContainer/VB/DisplaySettings" index="1"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="FullscreenLabel" type="Label" parent="PC/MC/VB/PanelContainer/VB/DisplaySettings/HB" index="0"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Fullscreen"

[node name="FullscreenButton" type="CheckButton" parent="PC/MC/VB/PanelContainer/VB/DisplaySettings/HB" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
button_pressed = true

[node name="AudioSettingsLabel" type="Label" parent="PC/MC/VB/PanelContainer/VB" index="1"]
layout_mode = 2
theme_type_variation = &"HeaderMedium"
text = "Audio Settings"

[node name="GridContainer" type="GridContainer" parent="PC/MC/VB/PanelContainer/VB" index="2"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/h_separation = 30
theme_override_constants/v_separation = 10
columns = 2

[node name="MusicLabel" type="Label" parent="PC/MC/VB/PanelContainer/VB/GridContainer" index="0"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "Music"

[node name="MusicSlider" type="HSlider" parent="PC/MC/VB/PanelContainer/VB/GridContainer" index="1"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[node name="SFXLabel" type="Label" parent="PC/MC/VB/PanelContainer/VB/GridContainer" index="2"]
layout_mode = 2
theme_type_variation = &"HeaderSmall"
text = "SFX"

[node name="SFXSlider" type="HSlider" parent="PC/MC/VB/PanelContainer/VB/GridContainer" index="3"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
size_flags_vertical = 4
max_value = 1.0
step = 0.05
value = 1.0

[connection signal="toggled" from="PC/MC/VB/PanelContainer/VB/DisplaySettings/HB/FullscreenButton" to="." method="_on_fullscreen_button_toggled"]
[connection signal="value_changed" from="PC/MC/VB/PanelContainer/VB/GridContainer/MusicSlider" to="." method="_on_music_slider_value_changed"]
[connection signal="value_changed" from="PC/MC/VB/PanelContainer/VB/GridContainer/SFXSlider" to="." method="_on_sfx_slider_value_changed"]
